--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,14 @@
     --link-ikon-color: #AFB1B8;
 }
 
-.body {
+body {
     color: var(--primary-text-color);
     font-family: Roboto, sans-serif;
     font-size: 14px;
     font-weight: 400;
     background-color: var(--color-white);
     line-height: normal;
+    width: 1600px;
 }
 
 .visually-hidden {
@@ -216,15 +217,13 @@ img {
 .advanced-title {
     margin-bottom: 10px;
 
-    font-size: 14px;
+    color: var(--title-text-color);
     font-weight: 700;
     text-transform: uppercase;
 }
 
 .advanced-text {
     color: var(--primary-text-color);
-    font-size: 14px;
-    font-weight: 400;
     line-height: 1.7;
     letter-spacing: 0.42px;
 }
@@ -240,6 +239,7 @@ img {
 .photo .photo-title {
     margin-bottom: 50px;
 
+    color: var(--title-text-color);
     text-align: center;
     font-size: 36px;
     font-weight: 700;
@@ -257,6 +257,7 @@ img {
 .team {
     padding-top: 94px;
     padding-bottom: 94px;
+
     background-color: var(--team-background-color);
     text-align: center;
 }
@@ -321,9 +322,16 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+
     width: 100%;
     height: 100%;
     fill: var(--link-ikon-color);
+    border-radius: 50%;
+}
+
+.team-icon-link: hover,
+.team-icon-link: focus {
+    color: var(--accent-color);
 }
 
 
@@ -345,3 +353,103 @@ img {
     color: var(--title-text-color);
 }
 
+.clients-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 30px;
+}
+
+.clients-item {
+    display: block;
+    width: calc((100% - 150px) / 6);
+    height: 92px;
+    border: 1px solid var(--link-ikon-color);
+    border-radius: 4px;
+}
+
+.clients-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    fill: var(--link-ikon-color);
+}
+
+.clients-link:hover,
+.clients-link:focus {
+    fill: var(--accent-color);
+    border: 1px solid var(--accent-color);
+}
+
+
+.footer {
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    background-color: var(--footer-color);
+}
+
+.footer .logo {
+    display: block;
+    margin-bottom: 20px;
+}
+
+.footer .part {
+    color: var(--color-white);
+}
+
+.address-list .link {
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--color-white);
+    text-decoration: none;
+    font-style: normal;
+}
+
+.address .link:hover,
+.address .link:focus {
+    color: var(--accent-color);
+}
+
+.address-list .contact {
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 14px;
+    font-weight: 400;
+    text-decoration: none;
+    font-style: normal;
+}
+
+.address .contact:hover,
+.address .contact:focus {
+    color: var(--accent-color);
+}
+
+.footer-nav {
+    display: flex;
+    align-items: baseline;
+    column-gap: 70px;
+}
+
+.join-title {
+    margin-bottom: 20px;
+
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: var(--color-white);
+}
+
+.join-list {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+}
+
+.join-item {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+}
