--- a/css/style.css
+++ b/css/style.css
@@ -421,6 +421,7 @@ img {
 .footer .logo {
     display: block;
     margin-bottom: 20px;
+    text-shadow: none;
 }
 
 .footer .part {
@@ -505,4 +506,87 @@ img {
     background-color: var(--accent-color);
 }
 
+/* portfolio */
 
+
+.portfolio-page .logo {
+    text-shadow: none;
+}
+
+.portfolio-footer {
+    margin-top: 94px;
+}
+
+.portfolio {
+    margin-top: 94px;
+}
+
+.portfolio .container {
+    display: flex;
+    justify-content: center;
+}
+
+.button-list {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+}
+
+.portfolio .button {
+    display: block;
+    color: var(--title-text-color);
+    background-color: var(--team-background-color);
+    border-radius: 4px;
+    border: 1px solid transparent;
+    padding: 6px 22px;
+    cursor: pointer;
+
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.7;
+    letter-spacing: 0.48px;
+}
+
+.portfolio .button:hover,
+.portfolio .button:focus {
+    color: var(--color-white);
+    background-color: var(--accent-color);
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin-top: 50px;
+}
+
+.portfolio-item {
+    width: 370px;
+    border: 1px solid #EEE;
+    background: #FFF;
+}
+
+.portfolio-title {
+    color: var(--title-text-color);
+    margin-top: 20px;
+    margin-left: 24px;
+    margin-right: 24px;
+
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 2;
+    letter-spacing: 0.48px;
+}
+
+.portfolio-text {
+    color: var(--primary-text-color);
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-top: 4px;
+    margin-bottom: 20px;
+
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.8;
+    letter-spacing: 0.48px;
+}
