--- a/css/style.css
+++ b/css/style.css
@@ -571,6 +571,12 @@ img {
     background: #FFF;
 }
 
+.portfolio-item:hover,
+.portfolio-item:focus {
+    box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+}
+
 .portfolio-title {
     color: var(--title-text-color);
     margin-top: 20px;
